--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 bson==0.5.9
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.1
 dnspython==1.16.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
+gunicorn==20.0.4
+heroku==0.1.4
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 pymongo==3.10.1
 python-dateutil==2.8.1
+requests==2.23.0
 six==1.14.0
+urllib3==1.25.9
 Werkzeug==1.0.1
